--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/tgfjt/hubot-hashme"
   },
   "bugs": {
-    "email": "fujita@tagpanda.co.jp",
+    "email": "tgfjt.mail@gmail.com",
     "url": "https://github.com/tgfjt/hubot-hashme/issues"
   },
   "license": "MIT",
