--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,12 @@ insert_final_newline = true
 [*.yml]
 indent_style = space
 indent_size = 2
+insert_final_newline = false
 
 [*.json]
 indent_style = space
 indent_size = 2
+insert_final_newline = false
+
+[*.md]
+insert_final_newline = false
