--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "to create hash with crypto for hubot",
   "main": "index.js",
   "scripts": {
-    "test": "node test/*.js"
+    "test": "node test/hashme-test.js"
   },
   "keywords": [
     "hubot",
